@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-08T16:24:45Z",
+  "timestamp" : "2022-06-09T08:25:44Z",
   "count_outdated" : 2143,
   "uniques_outdated" : 423,
-  "count" : 2169,
-  "uniques" : 441,
+  "count" : 2170,
+  "uniques" : 442,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -84,6 +84,13 @@
     },
     {
       "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
